--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="file_manager">
+  <meta name="apple-mobile-web-app-title" content="email_passwort_login">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>file_manager</title>
+  <title>email_passwort_login</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
